--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,4 @@
-:root {
-    --white: #fff;
-    --black: #222;
-    --pink: #f60091;
-    --grey: #444;
-    --grey2: #959595;
-    --grey-alt: #d1e2e9;
-    --yellow: #ffd800;
-    --green: #59b210;
-  }
-  
+
   *,
   *::before,
   *::after {
@@ -28,7 +18,7 @@
     font-size: 1.6rem;
     font-weight: 400;
     background-color: #fff;
-    color: #243a6f;
+    color: #292b2e;
     position: relative;
     z-index: 1;
   }
@@ -38,6 +28,7 @@
   h3,
   h4 {
     font-weight: 500;
+  
   }
   
   a {
@@ -62,10 +53,9 @@
     max-width: 100rem;
     margin: 0 auto;
   }
-
-  .header{
-    background-color:#aae4ff;
-  }
+  .logo:hover {
+      transform: translateY(-0.2rem);
+    }
   
   @media only screen and (max-width: 1200px) {
     .container {
@@ -78,16 +68,21 @@
   }
   
   /* Header */
-
+  .header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    box-shadow: 0 5px 15px rgba(221, 127, 127, 0.3);
+    z-index: 999;
+  
+  }
   .logo{
     display: flex;
     align-items: center;
     justify-content:space-around;
     padding:10px 50px;
     width: max-content;
-  }
-  .nav {
-    padding: 1.6rem 0;
   }
 
   .nav-container{
@@ -98,51 +93,31 @@
     background-color: lightgoldenrodyellow;
     position:relative}
 
-  .nav.fix-nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: #243a6f;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-    z-index: 999;
-  }
+
   
   .navigation {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
- 
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+
   }
   
   /* Hero */
-  .header .hero-img {
-    position:absolute;
-    bottom: -30%;
-    right: -10%;
-    height: 60rem;
-    object-fit: contain;
+  .hero-content{
+    margin-top: 9rem;
   }
-  
-  .hero-content {
-    position: absolute;
-    top: 70%;
-    transform: translate(25%, -50%);
-  }
-  
+
   .hero-content h2 {
     color: #b888ff;
     font-size: 3rem;
     font-weight: 700;
     margin-bottom: 1rem;
   }
-  
   .hero-content .discount {
     color: #cf5479;
   }
   
   .hero-content h1 span {
-    color: #482570;
+    color: #433c3b;
     font-size: 6rem;
     font-weight: 700;
     display: block;
@@ -151,24 +126,23 @@
   }
   
   .btn {
-    display: inline-block;
     background-color: #fc7c7c;
-    padding: 1.2rem 4rem;
+    padding: 1rem 7rem;
     color: #fff;
     font-weight: 900;
     text-transform: uppercase;
-    margin-top: 4rem;
-    
   }
-  
+
+
+  .div-hero{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin:auto;
+    background-color:#a5cadd;
+  }
   @media only screen and (max-width: 1200px) {
-    .header .hero-img {
-      right:20%;
-    }
-  
-    .hero-content {
-      transform: translate(10%, -60%);
-    }
   
     .hero-content h2 {
       font-size: 2rem;
@@ -180,9 +154,6 @@
   }
   
   @media only screen and (max-width: 996px) {
-    .header {
-      min-height: 50vh;
-    }
   
     .header .hero-img {
       height: 40rem;
@@ -191,9 +162,6 @@
   }
   
   @media only screen and (max-width: 567px) {
-    .header {
-      min-height: 70vh;
-    }
   
     .header .hero-img {
       height: 40rem;
@@ -202,7 +170,6 @@
   
     .hero-content {
       top: 40%;
-      transform: translate(15%, -10%);
     }
   
     .header .hero-img {
@@ -221,4 +188,388 @@
       padding: 1rem 3rem;
     }
   }
+  /*hero-2*/
+
+  .section {
+    padding: 10rem 0 5rem 0;
+  }
   
+  .banner2 {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 3rem;
+    background-color:#acafdf;
+  }
+  
+  /*ITENS*/
+  .title {
+    margin: 4rem 0 7rem 0;
+    text-align: center;
+    background-color: #fdcccc;
+    color:#433c3b;
+   
+  }
+  
+  .title h1 {
+    font-size: 3rem;
+    display: inline-block;
+    position: relative;
+    z-index: 0;
+  }
+  
+  .title h1::after {
+
+    position: absolute;
+    left: 50%;
+    bottom: -20%;
+    transform: translate(-50%, -50%);
+    background-color: var(--pink);
+    width: 50%;
+    height: 0.4rem;
+    z-index: 1;
+  }
+  
+  /*produtos teste*/
+  
+/* Product */
+.product-center {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  gap: 7rem 3rem;
+}
+
+.product {
+  height: 48rem;
+  background-color: #fff;
+  box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.15);
+  border-radius: 1rem;
+  text-align: center;
+  transition: all 300ms ease-in-out;
+}
+ .price{
+   margin:auto
+ }
+.product:hover {
+  box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.25);
+}
+
+.product-header {
+  position: relative;
+  height: 35rem;
+  background-color: #f6f2f1;
+  transition: all 300ms ease-in-out;
+  z-index: 0;
+}
+
+.product-header img {
+  height: 100%;
+}
+
+.product-footer {
+  padding: 2rem 1.6rem 1.6rem 1.6rem;
+}
+
+.product-footer h3 {
+  font-size: 2.2rem;
+}
+
+.rating {
+  color: #43b3d9;
+}
+
+.product-footer .price {
+  color: #ff7c9c;
+  font-size: 2rem;
+}
+
+.product:hover .product-header::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  border-radius: 1rem 1rem 0 0;
+  background-color: rgba(119, 79, 110, 0.5);
+  transition: all 500ms ease-in-out;
+  z-index: 1;
+}
+
+.product-header .icons {
+  position: absolute;
+  right: 5%;
+  top: 50%;
+  transform: translate(0, -50%) scale(0);
+  z-index: 2;
+  opacity: 0;
+  transition: all 500ms ease-in-out;
+}
+
+.product-header .icons span {
+  background-color: #fff;
+  font-size: 2.5rem;
+  display: block;
+  border-radius: 50%;
+  padding: 1.5rem 1.6rem;
+  line-height: 2rem;
+  cursor: pointer;
+  transition: all 300ms ease-in-out;
+}
+
+.product-header .icons span i {
+  transition: all 500ms ease-in-out;
+}
+
+.product-header .icons span:not(:last-child) {
+  margin-bottom: 1rem;
+}
+
+.product-header .icons span:hover {
+  background-color: #ff7c9c;
+  color: #fff;
+}
+
+.product:hover .icons {
+  opacity: 1;
+  transform: translate(0, -50%) scale(1);
+}
+
+.product-header .icons a {
+  display: block;
+  margin-bottom: 1rem;
+}
+
+/* Testimonials */
+.testimonial-center {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  gap: 6rem;
+}
+
+.testimonial {
+  position: relative;
+  padding: 5rem;
+  background-color: #fff;
+  box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.1);
+  transition: all 300ms ease-in-out;
+  text-align: center;
+  border-radius: 0.5rem;
+}
+
+.testimonial:hover {
+  box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.2);
+  transform: translateY(-1rem);
+}
+
+.testimonial span {
+  position: absolute;
+  top: 2%;
+  left: 50%;
+  font-size: 12rem;
+  font-family: sans-serif;
+  color: #ff7c9c;
+  line-height: 1;
+  transform: translate(-50%, 0);
+}
+
+.testimonial p {
+  margin: 2rem 0 1rem 0;
+}
+
+.testimonial .rating {
+  margin-bottom: 1rem;
+}
+
+.testimonial .img-cover {
+  border-radius: 50%;
+  width: 8rem;
+  height: 8rem;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.testimonial .img-cover img {
+  height: 100%;
+  object-fit: cover;
+}
+
+.testimonial h4 {
+  margin-top: 1rem;
+}
+
+/* detail*/ 
+.product-detail .details {
+  display: grid;
+  grid-template-columns: 1fr 1.2fr;
+  gap: 7rem;
+  align-items: center;
+  margin: auto;
+}
+
+.product-detail .left {
+  display: flex;
+  flex-direction: column;
+}
+
+.product-detail .left .main {
+  text-align: center;
+  background-color: #ffffff;
+  margin-bottom: 2rem;
+  height: 45rem;
+  padding: 3rem;
+  box-shadow: 2px 2px 4px rgb(209, 209, 191);
+  transition-duration: 2s
+}
+
+.product-detail .left .main:hover {
+  transform: scale(1.2);
+}
+
+.product-detail .left .main img {
+  object-fit: contain;
+  height: 100%;
+}
+
+.product-detail .thumbnails {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
+}
+
+.product-detail .thumbnail {
+  width: 10rem;
+  height: 10rem;
+  background-color: #f6f2f1;
+  text-align: center;
+}
+
+.product-detail .thumbnail img {
+  height: 100%;
+  object-fit: contain;
+}
+
+.product-detail .right span {
+  display: inline-block;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.product-detail .right h1 {
+  font-size: 4rem;
+  line-height: 1.2;
+  margin-bottom: 2rem;
+}
+
+.product-detail .right .price {
+  font-size: 600;
+  font-size: 2rem;
+  color: #ff7c9c;
+  margin-bottom: 2rem;
+  padding:1rem;
+}
+
+.product-detail .right div {
+  display: inline-block;
+  position: relative;
+  z-index: 1;
+}
+
+.product-detail .right select {
+  font-family: "Poppins", sans-serif;
+  width: 20rem;
+  padding: 0.7rem;
+  border: 1px solid #ccc;
+  appearance: none;
+  outline: none;
+}
+
+.product-detail form {
+  margin-bottom: 3rem;
+}
+
+.product-detail form span {
+  position: absolute;
+  top: 50%;
+  right: 1rem;
+  transform: translateY(-50%);
+  font-size: 2rem;
+  z-index: 0;
+}
+
+.product-detail .form {
+  margin-bottom: 3rem;
+}
+
+.product-detail .form input {
+  padding: 0.8rem;
+  text-align: center;
+  width: 3.5rem;
+  margin-right: 2rem;
+}
+
+.product-detail .form .addCart {
+  background: #ff7c9c;
+  padding: 0.8rem 4rem;
+  color: #fff;
+  border-radius: 3rem;
+}
+
+.product-detail h3 {
+  text-transform: uppercase;
+  margin-bottom: 2rem;
+}
+
+@media only screen and (max-width: 996px) {
+  .product-detail .left {
+    width: 30rem;
+    height: 45rem;
+  }
+
+  .product-detail .details {
+    gap: 3rem;
+  }
+
+  .product-detail .thumbnails {
+    width: 30rem;
+    gap: 0.5rem;
+  }
+
+  .product-detail .thumbnail {
+    width: auto;
+    height: 10rem;
+    background-color: #f6f2f1;
+    text-align: center;
+    padding: 0.5rem;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .product-detail .details {
+    grid-template-columns: 1fr;
+  }
+
+  .product-detail .right {
+    margin-top: 10rem;
+  }
+
+  .product-detail .left {
+    width: 100%;
+    height: 45rem;
+  }
+
+  .product-detail .details {
+    gap: 3rem;
+  }
+
+  .product-detail .thumbnails {
+    width: 100%;
+    gap: 0.5rem;
+  }
+}
+ /*foooter*/ 
+.footer1{
+  left: 0;
+  bottom: 0;
+  width: 100%; 
+  position: fixed;
+}
