--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@
     }
   
     .hero-content {
-      top: 40%;
+      padding: 50px;
     }
   
     .header .hero-img {
@@ -199,6 +199,13 @@
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
     gap: 3rem;
     background-color:#acafdf;
+  }
+
+  .banner3 {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+      gap: 3rem;
+      background-color:#acafdf;
   }
   
   /*ITENS*/
@@ -246,9 +253,7 @@
   text-align: center;
   transition: all 300ms ease-in-out;
 }
- .price{
-   margin:auto
- }
+
 .product:hover {
   box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.25);
 }
@@ -470,7 +475,6 @@
 
 .product-detail .right div {
   display: inline-block;
-  position: relative;
   z-index: 1;
 }
 
